--- a/pom.xml
+++ b/pom.xml
@@ -63,5 +63,21 @@
 			<version>${springtest.version}</version>
 		</dependency>
 
+		<!-- Podam: Pojo instanciator -->
+		<dependency>
+			<groupId>uk.co.jemos.podam</groupId>
+			<artifactId>podam</artifactId>
+			<version>6.0.1.RELEASE</version>
+		</dependency>
+
+		<!-- commons-lang3 -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.4</version>
+		</dependency>
+
+
+
 	</dependencies>
 </project>
